feat: redirect api root to swagger docs
